# db_upload

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  schema.json
src/db_upload/: cli.py
